<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/welcome"
                android:textSize="26sp"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#dddddd"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="66.6dp"
                android:gravity="center"
                android:text="@string/address_name"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/kcnum"
                android:layout_width="match_parent"
                android:layout_height="66.6dp"
                android:gravity="center"
                android:text="@string/address_no"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="66.6dp"
                android:gravity="center"
                android:text="@string/subject"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/line"
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="40dp"
        android:background="#dddddd"/>

    <TextView
        android:id="@+id/welcome_enter_system"
        android:layout_below="@id/line"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="32sp"
        android:text="@string/welcome_enter_system"
        android:layout_marginBottom="40dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/clock"
        android:layout_below="@id/welcome_enter_system"
        android:layout_width="match_parent"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_height="wrap_content"/>



    <EditText
        android:layout_marginTop="20dp"
        android:layout_below="@id/clock"
        android:id="@+id/student_id"
        android:inputType="number"
        android:hint="@string/student_id"
        android:layout_width="match_parent"
        android:textSize="26sp"
        android:layout_height="60dp"/>
    <Button
        android:id="@+id/start"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/start"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:textSize="18sp"/>
</RelativeLayout>