<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/welcome"
                android:textSize="26sp"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#dddddd"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/exam_no"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/examinee_name"
                android:textSize="18sp"/>

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/title"
        android:layout_marginBottom="40dp"
        android:background="#dddddd"/>


    <EditText
        android:id="@+id/first_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:layout_marginBottom="20dp"
        android:hint="@string/first_score"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>

    <EditText
        android:id="@+id/final_socre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_score"
        android:hint="@string/final_score"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>


    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:background="@color/colorPrimary"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="18sp"/>
</RelativeLayout>