<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:gravity="center_horizontal"
            android:text="@string/title_line_one"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/title_line_two"
            android:textSize="20sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dddddd"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_name"
            style="@style/account_password_edit_text"
            android:layout_width="match_parent"
            android:hint="@string/user_name"/>

        <View
            android:id="@+id/user_name_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dddddd"/>

        <EditText
            android:id="@+id/password"
            style="@style/account_password_edit_text"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:layout_marginBottom="6dp"
            android:inputType="textPassword"/>

        <View
            android:id="@+id/password_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dddddd"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/login"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_marginBottom="6dp"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/submit_data"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/submit_data"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>